--- a/style.css
+++ b/style.css
@@ -19,5 +19,5 @@ nav{
     background-color: var(--primary-color);
     border-right: 2px solid rgba(200, 200, 200, 0.1);
     color: #fff;
-    /* position: fixed; */
+    position: fixed;
 }
