--- a/style.css
+++ b/style.css
@@ -20,4 +20,11 @@ nav{
     border-right: 2px solid rgba(200, 200, 200, 0.1);
     color: #fff;
     position: fixed;
+    top: 0;
+    left: 0;
+    width: 200px;
+    height: 100vh;
+    z-index: 100;
+    transform: translate(-100%);
+
 }
