--- a/style.css
+++ b/style.css
@@ -25,6 +25,31 @@ nav{
     width: 200px;
     height: 100vh;
     z-index: 100;
-    transform: translate(-100%);
+    /* transform: translate(-100%); */
+}
 
+nav .logo {
+    padding: 30px 0;
+    text-align: center;
+}
+
+nav .logo img {
+    height: 75px;
+    width: 75px;
+    border-radius: 50%;
+}
+
+nav ul {
+    padding: 0;
+    list-style-type: none;
+    margin: 0;
+}
+
+nav ul li {
+    border-bottom: 2px solid rgba(200, 200, 200, 0.1);
+    padding: 20px;
+}
+
+nav ul li:first-of-type{
+    border-top: 2px solid rgba(200, 200, 200, 0.1);
 }
