--- a/style.css
+++ b/style.css
@@ -53,3 +53,12 @@ nav ul li {
 nav ul li:first-of-type{
     border-top: 2px solid rgba(200, 200, 200, 0.1);
 }
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+nav ul li a:hover {
+    text-decoration: underline;
+}
