css of modal-container, set display to none and commented it, will remove comment in future

--- a/style.css
+++ b/style.css
@@ -112,3 +112,8 @@ button:focus {
     width: 800px;
 
 }
+
+.modal-container {
+    background-color: rgba(0,0,0,0.6);
+    /* display: none; */
+}
